Work on recording structures in SOMns
Signed-off-by: Stefan Marr <git@stefan-marr.de>